// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders header and subHeader if subHeader passed 1`] = `
<div>
  <div
    className=""
    data-tid="text"
  >
    Contact Property
  </div>
  <div
    className=""
    data-tid="text"
  >
    To: (xxx) xxx - xxxx
  </div>
</div>
`;

exports[`Header renders header only if no subHeader passsed 1`] = `
<div>
  <div
    className=""
    data-tid="text"
  >
    Contact Property
  </div>
</div>
`;
